--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="scss/main.css"/>
     <title>Document</title>
 </head>
 <body>
@@ -43,12 +44,30 @@
       </nav>
 </header>
 
-    <main id="main-page">
-        <!--Page Content-->
-        <button class="btn btn-primary">hola</button>
-    </main>
+<main id="main-page">
 
-    <footer>The Footer</footer>
+</main>
+
+    <footer class="bg-dark text-white text-center footer">
+      <div class="row">
+          <div class="col-12 col-lg-4">
+              <h3 class="text-primary">Nos horaires</h3>
+              <p>Du Mardi Au Dimanche <br/>
+                12:00-14:00 - 18:00-23:00</p>
+          </div>
+          <div class="col-6 col-lg-4">
+              <p>Quai Antique <br/>
+                  5 Rue de la Route <br/>
+                  31150 Ville <br/>
+
+              </p>
+          </div>
+          <div class="col-6 col-lg-4">
+              <p>04 01 01 01 01 <br/>
+                contact@quaiantique.com</p>
+          </div>
+      </div>
+  </footer>
 
     <script type="module" src="Router/Router.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
