--- a/pages/home.html
+++ b/pages/home.html
@@ -12,8 +12,7 @@
         <div class="row row-cols-2 align-items-center">
             <div class="col">
                 <p class="text-justify">
-                    Bienvenue sur le site de notre restaurant gastronomique situé au cœur de la magnifique ville de Chambéry. Le chef Arnaut Michant vous invite à découvrir un voyage culinaire mémorable.
-                </p>
+                    Bienvenue à Quai Antique, où tradition et modernité se rencontrent pour une expérience culinaire unique.</p>
             </div>
             <div class="col">
                 <img class="w-100 rounded" src="../images/chef.jpg"/>
