--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="/galerie">Galerie</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">La carte</a>
+                <a class="nav-link" href="/lacarte">La Carte</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Les réservations</a>
