--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -15,77 +15,77 @@
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/salmon.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/mollejas.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/christmas-wallpaper-2009590_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/food-712665_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/scotch-2060499_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/italian-pasta-7432298_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/5.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/dinner-table-444434_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/7.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/chef.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
 
         <div class="col p-3">
             <div class="image-card text-white">
-                <img src="../images/food.jpg" class="rounded w-100"/>
+                <img src="../images/food-7595910_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
             </div>
         </div>
