--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="text-center pt-4">
-            <a href="#" class="btn btn-primary">Nos menus</a>
+            <a href="/lacarte" class="btn btn-primary">Nos menus</a>
         </div>
     </div>
 </article>
