--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="/lacarte">La Carte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Les réservations</a>
+                <a class="nav-link" href="/allResa">Mes Réservations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/account">Mon compte</a>
