--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -4,12 +4,19 @@
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
+    <div class="text-center">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal">Ajouter une photo</button>
+    </div>
     <div class="row row-cols-2 row-cols-lg-3">
         <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/food.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -17,6 +24,10 @@
             <div class="image-card text-white">
                 <img src="../images/salmon.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -24,6 +35,10 @@
             <div class="image-card text-white">
                 <img src="../images/mollejas.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -31,6 +46,10 @@
             <div class="image-card text-white">
                 <img src="../images/christmas-wallpaper-2009590_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -38,6 +57,10 @@
             <div class="image-card text-white">
                 <img src="../images/food-712665_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -45,6 +68,10 @@
             <div class="image-card text-white">
                 <img src="../images/scotch-2060499_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -52,6 +79,10 @@
             <div class="image-card text-white">
                 <img src="../images/italian-pasta-7432298_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -59,6 +90,10 @@
             <div class="image-card text-white">
                 <img src="../images/5.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -66,6 +101,10 @@
             <div class="image-card text-white">
                 <img src="../images/dinner-table-444434_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -73,6 +112,10 @@
             <div class="image-card text-white">
                 <img src="../images/7.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -80,6 +123,10 @@
             <div class="image-card text-white">
                 <img src="../images/chef.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
 
@@ -87,7 +134,65 @@
             <div class="image-card text-white">
                 <img src="../images/food-7595910_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
+                    <div class="action-image-buttons">
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+                        <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
+                    </div>
             </div>
         </div>
     </div>
+    <div class="text-center">
+        <a href="#" class="btn btn-primary">Réserver</a>
+    </div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="EditionPhotoModal" tabindex="-1" role="dialog" aria-labelledby="EditionPhotoModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title fs-5" id="EditionPhotoModalLabel">Edition Photo</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="mb-3">
+                  <label for="NamePhotoInput" class="form-label">Titre</label>
+                  <input type="text" class="form-control" id="NamePhotoInput" placeholder="lasagne" name="Photo">
+                </div>
+                <div class="mb-3">
+                  <label for="ImageInput" class="form-label">Image</label>
+                  <input type="file" class="form-control" id="ImageInput">
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary">Enregistrer</button>
+                </div>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal suppression -->
+<div class="modal fade" id="DeletePhotoModal" tabindex="-1" role="dialog" aria-labelledby="DeletePhotoModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title fs-5" id="DeletePhotoModalLabel">Supprimer cette Photo</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="mb-3">
+                  <p>Titre</p>
+                  <img src="../images/food-7595910_1280.jpg" class="rounded w-100"/>
+                </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-danger">Supprimer</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                </div>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
