--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="col-12 col-lg-4">
               <h3 class="text-primary">Nos horaires</h3>
               <p>Du Mardi Au Dimanche <br/>
-                12:00-14:00 - 18:00-23:00</p>
+                11:00-15:00 - 18:00-23:00</p>
           </div>
           <div class="col-6 col-lg-4">
               <p>Quai Antique <br/>
@@ -68,7 +68,7 @@
           </div>
       </div>
   </footer>
-
+    <script src="js/script.js"></script>
     <script type="module" src="Router/Router.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
