--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
     <div class="hero-scene-content">
         <p>Le Chef Arnaud Michant Vous Invite Au</p>
         <h1>Quai Antique</h1>
-        <button class="btn btn-primary">Réserver</button>
+        <a href="/reserver" class="btn btn-primary">Réserver</a>
     </div>
 </div>
 
