--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -13,7 +13,7 @@
             <div class="image-card text-white">
                 <img src="../images/food.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -24,7 +24,7 @@
             <div class="image-card text-white">
                 <img src="../images/salmon.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -35,7 +35,7 @@
             <div class="image-card text-white">
                 <img src="../images/mollejas.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -46,7 +46,7 @@
             <div class="image-card text-white">
                 <img src="../images/christmas-wallpaper-2009590_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -57,7 +57,7 @@
             <div class="image-card text-white">
                 <img src="../images/food-712665_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -68,7 +68,7 @@
             <div class="image-card text-white">
                 <img src="../images/scotch-2060499_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -79,7 +79,7 @@
             <div class="image-card text-white">
                 <img src="../images/italian-pasta-7432298_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -90,7 +90,7 @@
             <div class="image-card text-white">
                 <img src="../images/5.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -101,7 +101,7 @@
             <div class="image-card text-white">
                 <img src="../images/dinner-table-444434_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -112,7 +112,7 @@
             <div class="image-card text-white">
                 <img src="../images/7.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -123,7 +123,7 @@
             <div class="image-card text-white">
                 <img src="../images/chef.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
@@ -134,7 +134,7 @@
             <div class="image-card text-white">
                 <img src="../images/food-7595910_1280.jpg" class="rounded w-100"/>
                     <p class="titre-image">Titre</p>
-                    <div class="action-image-buttons">
+                    <div class="action-image-buttons" data-show="admin">
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
                         <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
                     </div>
